--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,6 @@
 .news-section {
   margin: 0;
   padding-top: 2rem;
-  padding-bottom: 2rem;
   background-color: white;
 }
 
@@ -119,7 +118,7 @@
   border-radius: 5px 0 0 5px;
 }
 
-.preview-image {
+/* .preview-image {
   display: block;
   width: 50px;
   height: 33.5px;
@@ -130,7 +129,7 @@
   border-top: 1px solid var(--dark);
   border-bottom: 3px solid var(--dark);
   border-radius: 5px;
-}
+} */
 
 .selected {
   transform: scale(1.2);
@@ -609,10 +608,10 @@
     top: 50%;
   }
 
-  .preview-image {
+  /* .preview-image {
     width: 75px;
     height: 50.25px;
-  }
+  } */
 
   .hero-container {
     background-image: url(../images/robot-main_large.jpg);
@@ -671,7 +670,6 @@
 
   .clubs-section {
     width: 100%;
-    padding-top: 50px;
   }
 
   .clubs-wrapper {
