--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -32,6 +32,10 @@ main {
   background-color: #d8d8d8;
 }
 
+section {
+  padding-top: 2rem;
+}
+
 .fa {
   color: var(--white);
   font-size: 2.5rem;
@@ -57,7 +61,7 @@ a {
   background-color: #fff;
   margin: 0 auto;
   padding-top: 2rem;
-  padding-bottom: 3rem;
+  padding-bottom: 4rem;
 }
 
 .content-container {
@@ -70,13 +74,16 @@ a {
 
 .main-heading-wrapper {
   display: flex;
-  margin-bottom: 1rem;
+  gap: 1rem;
+  padding: 1rem 0;
+  margin-bottom: 0.5rem;
 }
 
 .main-heading-left {
   width: 1rem;
   background-color: var(--navbar-color);
   flex-shrink: 0;
+  margin: -1rem 0 -1rem 0;
 }
 
 .main-heading {
@@ -85,15 +92,20 @@ a {
   font-weight: 600;
   color: var(--dark);
   margin: 0;
-  padding: 1rem;
+  padding: 0;
 }
 
 .main-sub-heading {
   margin: 0 0 1rem 0;
   padding: 0;
-  font-family: var(--proxima-soft);
-  font-weight: 500;
-  font-size: 1.25rem;
+  font-family: var(--main-sub-heading);
+  font-weight: 600;
+  font-size: 1.125rem;
+  color: var(--dark);
+  margin: 0;
+  padding: 0;
+  border-radius: 0 25px 25px 0;
+  font-style: italic;
 }
 
 .section-container {
@@ -366,6 +378,7 @@ header {
 .menu-link {
   text-decoration: none;
   font-size: 1.25rem;
+  outline: none;
 }
 
 .menu-link:hover {
@@ -870,19 +883,10 @@ footer {
 
 @media only screen and (min-width: 992px) {
 
-  /* new code */
-  .section-container {
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
+  /* Header
+  --------------------*/
 
-   .button {
-    font-size: 1.25rem;
-   } 
-
-     
-
-    .navbar-icon {
+  .navbar-icon {
       font-size: 2.5rem;
     }
 
@@ -890,6 +894,19 @@ footer {
 --------------------*/
   .main-wrapper {
     width: 90%;
+  }
+
+  .main-sub-heading {
+    font-size: 1.25rem;
+  }
+
+  .section-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .button {
+    font-size: 1.25rem;
   }
 
   /* Footer
@@ -939,7 +956,7 @@ footer {
   }
 
   .main-sub-heading {
-    font-size: 1.5rem;
+    font-size: 1.375rem;
   }
   
   .get-in-touch {
