--- a/styles/contact.css
+++ b/styles/contact.css
@@ -4,7 +4,7 @@
 /* main 
 --------------------*/
 .contact-section,
-.faq-section {
+.faq-section, .main-heading-wrapper, .main-sub-heading {
   width: 100%;
   margin: 0 auto;
 }
@@ -79,7 +79,7 @@ li > P {
   /* Main
 --------------------*/
   .contact-section,
-  .faq-section {
+  .faq-section, .main-heading-wrapper, .main-sub-heading {
     width: 85%;
   }
 }
@@ -88,7 +88,7 @@ li > P {
   /* Main
 --------------------*/
 .contact-section,
-  .faq-section {
+  .faq-section, .main-heading-wrapper, .main-sub-heading {
     width: 80%;
   }
 
@@ -103,7 +103,7 @@ li > P {
 --------------------*/
 
 .contact-section,
-.faq-section {
+.faq-section, .main-heading-wrapper, .main-sub-heading {
   width: 75%;
 }
 
@@ -125,7 +125,17 @@ li > P {
 }
 
 @media only screen and (min-width: 1600px) {
-  .contact-section, .faq-section {
+  .contact-section, .faq-section, .main-heading-wrapper, .main-sub-heading {
     width: 70%;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+
+  .contact-section,
+  .faq-section,
+  .main-heading-wrapper,
+  .main-sub-heading {
+    width: 60%;
   }
 }
