--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -44,6 +44,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto;
   gap: 3rem;
+  padding-top: 2rem;
   padding-bottom: 3rem;
 }
 
